--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Neutrino preset for building react applications with TypeScript",
   "main": "index.js",
+  "scripts": {
+    "test": "ava"
+  },
   "keywords": [
     "neutrino",
     "neutrino-preset",
