--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
   },
   "devDependencies": {
     "ava": "^0.19.1",
-    "neutrino": "^5.6.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "typescript": "^2.2.2"
+    "neutrino": "^5.9.0",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "typescript": "^2.5.3"
   },
   "dependencies": {
     "neutrino-preset-ts": "^1.5.5",
-    "react-hot-loader": "3.0.0-beta.6"
+    "react-hot-loader": "^3.1.1"
   }
 }
